# macromancer

./: .clang-format  CMakeLists.txt  README.md  build.sh  example.c  run.sh  runner.py
src/: ce_getopt.c  ce_getopt.h  codegen.c  codegen.h  diagnostics.c  diagnostics.h  main.c  parser.c  parser.h  span.c  span.h  stringdef.h  vec.h  vmem_arena.c  vmem_arena.h
tests/: animals.h  animals.mm  dog_cat.h  main.c
